very wip, subject to change, need fix canteenlib to support paths in urls
